add the eight .md

--- a/7基于视觉格式化.md
+++ b/7基于视觉格式化.md
@@ -4,11 +4,11 @@
 
 内边框和边框不能为负值
 
-<img src="box.png"></img>
+<img src="/img/box.png"></img>
 
 # 块级元素#
 完整的框模型
-<img src="box1.png"></img>
+<img src="/img/box1.png"></img>
 
 ## 水平属性 ##
 width、margin-left、margin-right、padding-left、padding-right、border-left、border-right
@@ -151,7 +151,7 @@ height必须为auto或者为某种类型的非负值。
 
 ----------
 
-<img style="width:800px;" src="chongdie.png"></img>
+<img style="width:800px;" src="/img/chongdie.png"></img>
 
 ----------
 
