--- a/8内边距边框和外边距.md
+++ b/8内边距边框和外边距.md
@@ -15,27 +15,129 @@ margin：10%
 
 没有对元素的width设置大小，margin会填充到等于父元素的width
 
+## 外边距和行内元素 ##
+
+1.行内非替换元素
+设置外边框margin：25px; 左右边框可见，上下边框无效。
+
+
+如果**出现换行**，左右外边框也只显示在非替换元素的起点和终点的左右外边框。
+
+<p>this paragraph contains <strong style="margin:25px;background:grey">非替换元素 strong 内容</strong>that has been styled as indicated.</p>
+
+外边框设置为负数，会是覆盖的效果
+
+<p>this paragraph contains被覆盖辽辽辽<strong style="margin:-80px;background:grey">非替换元素 strong 内容</strong>被覆盖辽盖辽 that has been styled as indicated.</p>
+
+2.替换元素：设置外边距确实会影响行高
+
+<p style="border:1px solid red">同一行高度变宽 确实改变 <input style="margin:25px;background:yellow">替换元素 input 内容that has been styled as indicated.been styled as indicated.been styled as indicated.been 这是原本的高度 这是原本的高度 这是原本的高度t 原本的高度</p>
+
+# 边框border #
+元素的背景会延伸到边框层级
+   <div style="width: 400px;height: 50px;border:10px dotted red;padding:10px;background-color: blueviolet;margin: 10px;;">
+        `122
+    </div>
+border边框的内容还包含在背景里面
+
+
+边框颜色透明：**transparent**
+就像额外的内边距一样
+相比内边距的好处在于：透明的边框可以在需要的时候使其可见。
+
+因为元素的背景会延伸到边框区
+
+e.g设置鼠标停留在链接上时，边框要凸起、因此可以在边框处于非悬停状态下透明。
+<style>
+    a:link,
+    a:visited {
+        border-style: solid;
+        border-width: 5px;
+        border-color: transparent;
+    }
+    
+    a:hover {
+        border-color: red;
+    }
+	
+</style>
+
+<a href=" ">fistblood</a>
+<a href=" ">secondblood</a>
+<a href=" ">thirdblood</a>
+
+(在浏览器看效果，这里显示不出来！！)
+
+border的大小px，颜色，样式
+顺序可以不固定
+可以省略
+但是，如果没有边框样式，**默认样式值为non**e会使得边框不复存在
+
+而如果只设置了样式，就会有一个边框，**默认宽度为medium** **颜色与元素本身的文本颜色相同**
+
+使用全局时，要当心不要少了值，如果 上了值，就会自动填入默认值，出现意想不到的后果。
+
+## 边框和行内元素  ##
+
+<p >生活于秦岭大熊猫繁育研究中心的“七仔”，出生于2009年，雄性，今年十岁，性格憨厚老实<strong style="border:25px solid red;background-color: blueviolet;margin: 10px;;">添加了边框的行内元素，</strong>生活于秦岭大熊猫繁育研究中心的“七仔”，出生于2009年，雄性，今年十岁，性格憨厚老实</p>
+
+可见，不论行内元素的边框指定怎样的宽度，元素的行高都不会改变。
+即上下边框会覆盖其他元素，而左右边框不会覆盖其他元素。边框该放在那里就会放在哪里。
+
+就像外边距一样.如果设置了边框，浏览器计算换行时并不受行内元素所设置的任何框属性的直接影响.唯一的作用是边框所占空间可能把行中的某些部分向后移一点点，而这有可能改变位于行尾的词.
+
 
 # 内边距 #
+为内边距设置百分数值，像外边距一样，百分数值要相对其父元素的width计算。如果父元素的width改变，它们也会改变。
 
+<div style="width: 200px">
+    width为200px；
+    <p style="background-color: pink;padding:10%">秦岭大熊猫繁育研究中心秦岭大熊猫繁育研究中心秦岭大熊猫繁育研究中心秦岭大熊猫繁育研究中心</p>
+</div>
+<div style="width: 400px;">
+    width为400px；
+    <p style="background-color: pink;padding:10%">秦岭大熊猫繁育研究中心秦岭大熊猫繁育研究中心秦岭大熊猫繁育研究中心秦岭大熊猫繁育研究中心</p>
+</div>
 
+注意，上下内边距与左右内边距一致，也就是说，上下内边距的百分数会相对于父元泰宽度计算，而不是相对于高度。当然，这在前面已经见过（在"外边距” 一节中讨论过这个问题），不过还是有必要再回頤一下，看看它是如何作用的.
 
+## 内边距和行内非替换元素 ##
+
+<p>外边的内容 外边的内容 外边的内容 外边的内容 外边的内容 外边的内容 外边的内容
+<strong style="background-color: burlywood;padding:1.5em">行内非替换元素 行内非替换元素 行内非替换元素 </strong> 外边的内容 外边的内容 外边的内容 外边的内容 外边的内容 外边的内容 <strong style="padding:1.5em"> 没有背景颜色的非替换元素，只显示出空的左右边距</strong> 行内非替换元素 行内非替换元素 行内非替换元素 </strong>外边的内容 外边的内容 外边的内容 
+</p>
+<hr>
+可见，行内非替换元素的两端都出现了空的背景，即为设置的内边距。
+
+上下内边距的背景色会项元素上面和下面延伸。左右内边距则不会。与外边距相似。
+
+若不设置背景色，出现的现象为左右边距会有空，上下则不会。
+
+## 内边距和替换元素 ##
+
+**图片可以设置内边距：**
+
+<img style="width:300px;;background:red;padding:1em" src="img/pho.png"></img>
+
+**表单元素的内边距存在混淆：**
+<div style="display:inline-block">
+输入框有无padding对比：
+<input type="text"  value="有padding" style="background:yellow;padding:1em" />
+
+<input type="text"  value="无padding" style="background:yellow;padding:0" />
+</div>
+
+<div style="display:inline-block">
+按钮有无padding对比：
+<input type="button"  value="有padding" style="background:yellow;padding:1em" />
+
+<input type="button"  value="无padding" style="background:yellow;" />
+</div>
+
+对于复选框，并不知道内边距是设置在那里
+<input type="checkbox"  value="背景色" style="background:yellow;padding:1em" />
 
 # 小结 #
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <style> 
   p{
@@ -45,4 +147,5 @@ margin：10%
 	font-family: 黑体;
  
   }
+
 </style>   
